# stats

./: .env  Cargo.toml  README.md  create_db_and_user.sql  i18n.toml
ibihf-macros/: Cargo.toml
ibihf-macros/src/: lib.rs
migrations/: 20230324221302_add_leagues.down.sql  20230324221302_add_leagues.up.sql  20230324221303_create_league_names.down.sql  20230324221303_create_league_names.up.sql  20230324221305_create_division.down.sql  20230324221305_create_division.up.sql  20230324221315_create_division_names.down.sql  20230324221315_create_division_names.up.sql  20230324224957_create_teams.up.sql  20230324224960_create_team_names.down.sql  20230324224960_create_team_names.up.sql  20230324225513_create_players.down.sql  20230324225513_create_players.up.sql  20230324230201_create_games.up.sql  20230325035659_add_leagues.down.sql  20230325035659_add_leagues.up.sql  20230325040553_add_divisions.down.sql  20230325040553_add_divisions.up.sql  20230325040554_add_teams.down.sql  20230325040554_add_teams.up.sql  20230325044408_populate_players.down.sql  20230325044408_populate_players.up.sql  20230325193929_create_positions.down.sql  20230325193929_create_positions.up.sql  20230325194303_add_positions.down.sql  20230325194303_add_positions.up.sql  20230327021921_create_period_types.down.sql  20230327021921_create_period_types.up.sql  20230327021921_create_periods.up.sql  20230327021922_add_period_types.down.sql  20230327021922_add_period_types.up.sql  20230327021922_add_periods.up.sql  20230327024927_create_team_players.down.sql  20230327024927_create_team_players.up.sql  20230327025700_create_games.up.sql  20230327025705_create_game_names.down.sql  20230327025705_create_game_names.up.sql  20230327025710_create_games.up.sql  20230327025711_add_games.down.sql  20230327025711_add_games.up.sql  (+67 more)
src/: db.rs  filters.rs  forms.rs  languages.rs  main.rs  model.rs  traits.rs  translations.rs  views.rs
templates/: division_list.html  fi.yml  form.html  game_list.html  game_score_page.html  hello.html  language_list.html  league_list.html  master.html  player_page.html
templates/partials/: box_score_table.html  iihf_team_stats_table.html  individual_game_points_table.html  play_by_play_table.html  team_stats_table.html
templates/partials/forms/: master.html
templates/partials/forms/league/: list.html
translations/: en-CA.yml  en-ca.yml  en.json  en.xml  fr-CA.yml  fr-ca.yml  fr.json  fr.xml
translations/en-CA/: ibihf.ftl  terms.ftl  urls.ftl
translations/fr-CA/: ibihf.ftl  terms.ftl  urls.ftl
