[package]
name = "ibihf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.12" }
axum-macros = "0.3.7"
chrono = { version = "0.4.24", features = ["serde"] }
serde = "1.0.158"
serde_plain = "1.0.1"
serde_tuple = "0.5.0"
sql-builder = "3.1.1"
static_assertions = "1.1.0"
tera = "1.18.1"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros" ] }
sqlx = { version = "0.5", features = ["macros", "postgres", "runtime-tokio-rustls", "chrono"] }
ormx = { version = "0.10.0", features = ["postgres"] }
serde-xml-rs = "0.6.0"
strum = { version = "0.24.1", features = ["derive"] }
rust-i18n = "1.1.4"
once_cell = "1.17.1"
derive_more = "0.99.17"

[dev-dependencies]
tokio-test = "0.4.2"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-loCAles = ["en-CA", "fr-CA"]

# The default locale, default: "en".
default-locale = "en-CA"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path is same as the path you pass to `rust_i18n::i18n!` method.
load-path = "translations"
