[package]
name = "ibihf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { git = "https://github.com/TTWNO/askama/", features = ["with-axum", "i18n"] }
askama_axum = { git = "https://github.com/TTWNO/askama/" }
axum = { version = "0.6.15" }
chrono = { version = "0.4.24", features = ["serde"] }
serde = "1.0.158"
static_assertions = "1.1.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros" ] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"] }
ormx = { git = "https://github.com/NyxCode/ormx", default-features = false, features = ["postgres"] }
strum = { version = "0.24.1", features = ["derive"] }
derive_more = "0.99.17"
strum_macros = "0.24.3"
hashmap_macro = "0.1.0"
ibihf-macros = { version = "0.1.0", path = "ibihf-macros" }
rename-item = "0.1.1"

[dev-dependencies]
tokio-test = "0.4.2"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-loCAles = ["en-ca", "fr-ca"]

# The default locale, default: "en".
default-locale = "en-ca"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path is same as the path you pass to `rust_i18n::i18n!` method.
load-path = "translations"
